ffmpeg: dont copy creation_time as the destination file is not created at that time

Fixes Ticket1439

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>